cmake_minimum_required(VERSION 3.9)
project(Programming_Project_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(Programming_Project_2 main.cpp CompanyCosts.h Times.cpp Times.h ValidateDouble.cpp ValidateDouble.h Transportation.cpp Transportation.h TravelExpenses.cpp TravelExpenses.h OutputToFile.cpp OutputToFile.h)